cloud/logs/registry.log
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/daemons/dynasty_registry.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
